Fix bug with image overflow

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,9 @@ header {
 }
 
 .featured-work {
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -60,8 +63,21 @@ header {
 }
 .featured-work-item {
   text-align: center;
+  max-width: 300px;
+  margin-top: 20px;
 }
 
-.project-title {
-  /*text-align: center;*/
+.featured-work-item img {
+  width: 100%;
+  height: 200px;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 500px) {
+
+}
+
+@media screen and (min-width: 750px) {
+
 }
